# vgamod

./: .gitignore  .gitmodules  CMakeLists.txt  VGA.url  Vga_settings.xlsx  main.cpp  mandelbrot.cpp  test.cpp  vgaCapture.sal
GameOfLife/: CMakeLists.txt  gof.cpp  gof.h
Vga/: CMakeLists.txt  mono.pio  mono.pio.h  vga.cpp  vga.h
imageConverter/: conv.py  reisen.cpp  test.txt
tetris/: CMakeLists.txt  tetris.cpp  tetris.h
